--- a/Code/Unity.Aid.asmdef
+++ b/Code/Unity.Aid.asmdef
@@ -6,7 +6,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:f06555f75b070af458a003d92f9efb00",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:84651a3751eca9349aac36a66bba901b"
+        "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:69448af7b92c7f342b298e06a37122aa"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
