--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.aid.main",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "displayName": "Aid",
   "description": "Bunch of tools to help development process",
   "unity": "2021.1",
@@ -9,7 +9,7 @@
     "com.unity.inputsystem": "1.3.0"
   },
   "author": {
-    "name": "Konrad Szymański",
+    "name": "Konrad Szyma\u0144ski",
     "email": "konrad.szymanski96@gmail.com"
   }
 }
