- added UniTask package

--- a/Code/Unity.Aid.asmdef
+++ b/Code/Unity.Aid.asmdef
@@ -7,7 +7,8 @@
         "GUID:f06555f75b070af458a003d92f9efb00",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:69448af7b92c7f342b298e06a37122aa"
+        "GUID:69448af7b92c7f342b298e06a37122aa",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
