--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "unity": "2021.1",
   "dependencies": {
     "com.unity.addressables": "1.19.19",
-    "com.unity.inputsystem": "1.3.0"
+    "com.unity.inputsystem": "1.3.0",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask"
   },
   "author": {
     "name": "Konrad Szyma\u0144ski",
